--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint-config-next": "13.4.9",
+    "lucide-react": "^0.260.0",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
